--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </div>
         <div class="mb-3">
           <label for="year" class="form-label">Published Year</label>
-          <input type="text" class="form-control" id="year">
+          <input type="number" class="form-control" id="published-year">
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="isComplete">
           <label class="form-check-label" for="check">Sudah dibaca</label>
         </div>
         <div class="d-grid gap-2 col-6 mx-auto">
-          <button type="submit" class="btn btn-primary">Add Book</button>
+          <button type="submit" class="btn submit-btn btn-primary">Add Book</button>
         </div>
       </form>
     </div>
@@ -54,7 +54,7 @@
     <div class="container">
       <h2>Search Book</h2>
       <form id="search" class="d-flex">
-        <input type="text" class="form-control" id="search-title">
+        <input type="search" class="form-control" id="search-title">
         <button type="submit" class="btn search-btn ms-4">
           <i class="fas fa-search"></i>
         </button>
@@ -73,7 +73,7 @@
               <div class="author">Author: xxxxx</div>
               <div class="year">Tahun Terbit: xxxx</div>
               <div class="btn-container action d-flex gap-3 justify-content-end">
-                <button type="submit" class="btn btn-primary">Sudah Dibaca</button>
+                <button type="submit" class="btn finish-btn btn-primary">Sudah Dibaca</button>
                 <button type="submit" class="btn btn-danger">Hapus Buku</button>
               </div>
             </div>
@@ -82,14 +82,7 @@
         <div class="col-lg col-md-12 ">
           <h2>Sudah Dibaca</h2>
           <div id="finished">
-            <!-- <div class="card book-detail mt-3">
-              <h5 class='card-title title'>Judul Buku</h5>
-              <div class="author">Author: xxxxx</div>
-              <div class="year">Tahun Terbit: xxxx</div>
-              <div class="btn-container action d-flex gap-3 justify-content-end">
-                <button type="submit" class="btn btn-primary">Sudah Dibaca</button>
-                <button type="submit" class="btn btn-danger">Hapus Buku</button>
-              </div> -->
+            
           </div>
         </div>
       </div>
@@ -102,6 +95,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
